--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.1.5",
     "vitest": "^3.2.4"
   }
